# obs-text-pango

./: CMakeLists.txt
.github/workflows/: windows.yml
cmake/: FindCairo.cmake  FindFontconfig.cmake  FindHarfBuzz.cmake  FindPango.cmake  FindPangocairo.cmake  FindPangoft2.cmake  FindPangowin32.cmake
